--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,5 +6,11 @@ pipeline {
                 sh 'node --version'
             }
         }
+        stage('Generar reporte performance'){
+            steps{
+                sh 'lighthouse-ci https://www.ciencuadras.com --jsonReport --report=.'
+                lighthouseReport file: './report.json', name: 'My Report'
+            }
+        }
     }
 }
